move user to ddd
