# internal/user/dto/user.go
@@ -1,0 +1,45 @@
+package dto
+
+import (
+	"time"
+)
+
+type User struct {
+	ID        string    `json:"id"`
+	Email     string    `json:"email"`
+	CreatedAt time.Time `json:"created_at"`
+	UpdatedAt time.Time `json:"updated_at"`
+}
+
+type RegisterReq struct {
+	Email    string `json:"email" validate:"required,email"`
+	Password string `json:"password" validate:"required,password"`
+}
+
+type RegisterRes struct {
+	User User `json:"user"`
+}
+
+type LoginReq struct {
+	Email    string `json:"email" validate:"required,email"`
+	Password string `json:"password" validate:"required,password"`
+}
+
+type LoginRes struct {
+	User         User   `json:"user"`
+	AccessToken  string `json:"access_token"`
+	RefreshToken string `json:"refresh_token"`
+}
+
+type RefreshTokenReq struct {
+	RefreshToken string `json:"refresh_token" validate:"required"`
+}
+
+type RefreshTokenRes struct {
+	AccessToken string `json:"access_token"`
+}
+
+type ChangePasswordReq struct {
+	Password    string `json:"password" validate:"required,password"`
+	NewPassword string `json:"new_password" validate:"required,password"`
+}
