# internal/user/port/http/handlers.go
@@ -1,0 +1,144 @@
+package http
+
+import (
+	"net/http"
+
+	"github.com/gin-gonic/gin"
+	"github.com/quangdangfit/gocommon/logger"
+
+	"goshop/internal/user/dto"
+	"goshop/internal/user/service"
+	"goshop/pkg/response"
+	"goshop/pkg/utils"
+)
+
+type UserHandler struct {
+	service service.IUserService
+}
+
+func NewUserHandler(service service.IUserService) *UserHandler {
+	return &UserHandler{
+		service: service,
+	}
+}
+
+// Login godoc
+//
+//	@Summary	Login
+//	@Tags		users
+//	@Produce	json
+//	@Param		_	body		dto.LoginReq	true	"Body"
+//	@Success	200	{object}	dto.LoginRes
+//	@Router		/auth/login [post]
+func (h *UserHandler) Login(c *gin.Context) {
+	var req dto.LoginReq
+	if err := c.ShouldBindJSON(&req); c.Request.Body == nil || err != nil {
+		logger.Error("Failed to get body", err)
+		response.Error(c, http.StatusBadRequest, err, "Invalid parameters")
+		return
+	}
+
+	user, accessToken, refreshToken, err := h.service.Login(c, &req)
+	if err != nil {
+		logger.Error("Failed to get body", err)
+		response.Error(c, http.StatusInternalServerError, err, "Something went wrong")
+		return
+	}
+
+	var res dto.LoginRes
+	utils.Copy(&res.User, &user)
+	res.AccessToken = accessToken
+	res.RefreshToken = refreshToken
+	response.JSON(c, http.StatusOK, res)
+}
+
+// Register godoc
+//
+//	@Summary	Register new user
+//	@Tags		users
+//	@Produce	json
+//	@Param		_	body		dto.RegisterReq	true	"Body"
+//	@Success	200	{object}	dto.RegisterRes
+//	@Router		/auth/register [post]
+func (h *UserHandler) Register(c *gin.Context) {
+	var req dto.RegisterReq
+	if err := c.ShouldBindJSON(&req); c.Request.Body == nil || err != nil {
+		logger.Error("Failed to get body", err)
+		response.Error(c, http.StatusBadRequest, err, "Invalid parameters")
+		return
+	}
+
+	user, err := h.service.Register(c, &req)
+	if err != nil {
+		logger.Error(err.Error())
+		response.Error(c, http.StatusInternalServerError, err, "Something went wrong")
+		return
+	}
+
+	var res dto.RegisterRes
+	utils.Copy(&res.User, &user)
+	response.JSON(c, http.StatusOK, res)
+}
+
+// GetMe godoc
+//
+//	@Summary	get my profile
+//	@Tags		users
+//	@Security	ApiKeyAuth
+//	@Produce	json
+//	@Success	200	{object}	dto.User
+//	@Router		/auth/me [get]
+func (h *UserHandler) GetMe(c *gin.Context) {
+	userID := c.GetString("userId")
+	user, err := h.service.GetUserByID(c, userID)
+	if err != nil {
+		logger.Error(err.Error())
+		response.Error(c, http.StatusInternalServerError, err, "Something went wrong")
+		return
+	}
+
+	var res dto.User
+	utils.Copy(&res, &user)
+	response.JSON(c, http.StatusOK, res)
+}
+
+func (h *UserHandler) RefreshToken(c *gin.Context) {
+	userID := c.GetString("userId")
+	accessToken, err := h.service.RefreshToken(c, userID)
+	if err != nil {
+		logger.Error("Failed to refresh token", err)
+		response.Error(c, http.StatusInternalServerError, err, "Something went wrong")
+		return
+	}
+
+	res := dto.RefreshTokenRes{
+		AccessToken: accessToken,
+	}
+	response.JSON(c, http.StatusOK, res)
+}
+
+// ChangePassword godoc
+//
+//	@Summary	changes the password
+//	@Tags		users
+//	@Security	ApiKeyAuth
+//	@Produce	json
+//	@Param		_	body	dto.ChangePasswordReq	true	"Body"
+//	@Router		/auth/change-password [put]
+func (h *UserHandler) ChangePassword(c *gin.Context) {
+	var req dto.ChangePasswordReq
+	if err := c.ShouldBindJSON(&req); c.Request.Body == nil || err != nil {
+		logger.Error("Failed to get body", err)
+		response.Error(c, http.StatusBadRequest, err, "Invalid parameters")
+		return
+	}
+
+	userID := c.GetString("userId")
+	err := h.service.ChangePassword(c, userID, &req)
+	if err != nil {
+		logger.Error(err.Error())
+		response.Error(c, http.StatusInternalServerError, err, "Something went wrong")
+		return
+	}
+	response.JSON(c, http.StatusOK, nil)
+}
