# internal/user/port/http/routes.go
@@ -1,0 +1,28 @@
+package http
+
+import (
+	"github.com/gin-gonic/gin"
+	"github.com/quangdangfit/gocommon/validation"
+
+	"goshop/app/middleware"
+	"goshop/internal/user/repository"
+	"goshop/internal/user/service"
+)
+
+func Routes(r *gin.RouterGroup) {
+	validator := validation.New()
+	userRepo := repository.NewUserRepository()
+	userSvc := service.NewUserService(validator, userRepo)
+	userHandler := NewUserHandler(userSvc)
+
+	authMiddleware := middleware.JWTAuth()
+	refreshAuthMiddleware := middleware.JWTRefresh()
+	authRoute := r.Group("/auth")
+	{
+		authRoute.POST("/register", userHandler.Register)
+		authRoute.POST("/login", userHandler.Login)
+		authRoute.POST("/refresh", refreshAuthMiddleware, userHandler.RefreshToken)
+		authRoute.GET("/me", authMiddleware, userHandler.GetMe)
+		authRoute.PUT("/change-password", authMiddleware, userHandler.ChangePassword)
+	}
+}
